syntax = "proto3";

package twooter;

option go_package = "github.com/tedsilb/twooter/proto/twooterpb";

import "google/protobuf/timestamp.proto";

message Twoot {
  // Unique identifier of the Twoot.
  string id = 1;

  // Creator of the Twoot.
  User creator = 2;

  // Time the Twoot was created at.
  .google.protobuf.Timestamp create_time = 3;

  // Message of the Twoot.
  string message = 4;
}

message User {
  // Unique identifier of a User.
  string id = 1;

  // Public handle of the User.
  string handle = 2;

  // Email address of the User.
  string email = 3;
}
